--- a/static_project/our_static/css/navbar-static-top.css
+++ b/static_project/our_static/css/navbar-static-top.css
@@ -1,8 +1,33 @@
-/* Move down content because we have a fixed navbar that is 50px tall */
 body {
-    min-height: 200px;
+  min-height: 2000px;
 }
 
 .navbar-static-top {
-    margin-bottom: 19px;
+  margin-bottom: 19px;
+  background-color: #0E3D14;
+  border-color: #1A5F23;
+}
+
+.navbar-default .navbar-brand {
+  color: #FFF;
+}
+
+.navbar-default .navbar-brand:hover {
+  color: #777;
+}
+
+.navbar-default .navbar-nav>li>a:hover {
+  color: #999;
+}
+
+.navbar-default .navbar-toggle {
+ border-color: transparent !important;
+}
+
+.navbar-toggle:hover {
+	background-color: #1A5F23 !important;
+}
+
+.navbar-toggle {
+	background-color: #0E3D14 !important;
 }
