--- a/templates/home.html
+++ b/templates/home.html
@@ -3,19 +3,32 @@
 
 {% block head_title %}Main {% endblock %}
 
+<style>
+    {% block style %}
+        .navbar-static-top {
+            margin-bottom: 0px !important;
+        }
+        .jumbotron {
+            background-color:#0E3D14;
+            color: #FFF;
+        }
+    {% endblock %}
+</style>
 
 {% block jumbotron %}
     <div class="jumbotron">
-        <div class="row">
-            <div class='col-xs-8'>
-                <h2>Try Django 1.8</h2>
-                <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work.</p>
-                <p>
-                  <a class="btn btn-lg btn-primary" href="" role="button">Join Us &raquo;</a>
-                </p>
-            </div>
-            <div class='col-xs-4'>
+        <div class="container">
+            <div class="row">
+                <div class='col-xs-8'>
+                    <h1>Try Django 1.8</h1>
+                    <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work.</p>
+                    <p>
+                      <a class="btn btn-lg btn-primary" href="" role="button">Join Us &raquo;</a>
+                    </p>
+                </div>
+                <div class='col-xs-4'>
 
+                </div>
             </div>
         </div>
     </div>
